chap6/DexToSource/src/com/riis/decompiler/DexToSourceCastingParser.java
// $ANTLR 3.4 src/com/riis/decompiler/DexToSourceCasting.g 2012-09-20 16:27:32

	package com.riis.decompiler;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class DexToSourceCastingParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD_INT", "CLASS", "COMMENT", "CONST_16", "CONST_4", "CONST_HIGH_16", "CONST_STRING", "DIGIT", "FIELD", "FINAL", "GOTO", "IDENT", "IF_GE", "INIT", "INT_TO_CHAR", "INVOKE_DIRECT", "INVOKE_VIRTUAL", "LABEL", "LIMIT", "LINE", "METHODEND", "METHODSTRT", "MOVE_RESULT_OBJECT", "NEW_INSTANCE", "PUBLIC", "REGISTERS", "RETURN_VOID", "SGET_OBJECT", "SOURCE", "STATIC", "SUPER", "WS", "'\"'", "'('", "')'", "'.'", "'.java'", "'/'", "':'", "';'", "'='", "'L'", "'V'", "'[L'", "']'", "'parameter['", "'this:'", "'v'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int ADD_INT=4;
    public static final int CLASS=5;
    public static final int COMMENT=6;
    public static final int CONST_16=7;
    public static final int CONST_4=8;
    public static final int CONST_HIGH_16=9;
    public static final int CONST_STRING=10;
    public static final int DIGIT=11;
    public static final int FIELD=12;
    public static final int FINAL=13;
    public static final int GOTO=14;
    public static final int IDENT=15;
    public static final int IF_GE=16;
    public static final int INIT=17;
    public static final int INT_TO_CHAR=18;
    public static final int INVOKE_DIRECT=19;
    public static final int INVOKE_VIRTUAL=20;
    public static final int LABEL=21;
    public static final int LIMIT=22;
    public static final int LINE=23;
    public static final int METHODEND=24;
    public static final int METHODSTRT=25;
    public static final int MOVE_RESULT_OBJECT=26;
    public static final int NEW_INSTANCE=27;
    public static final int PUBLIC=28;
    public static final int REGISTERS=29;
    public static final int RETURN_VOID=30;
    public static final int SGET_OBJECT=31;
    public static final int SOURCE=32;
    public static final int STATIC=33;
    public static final int SUPER=34;
    public static final int WS=35;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public DexToSourceCastingParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public DexToSourceCastingParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return DexToSourceCastingParser.tokenNames; }
    public String getGrammarFileName() { return "src/com/riis/decompiler/DexToSourceCasting.g"; }


    	String className;
    	String flag_result = "";
    	
    	JavaOutput fout = DexToSource.fout;



    // $ANTLR start "rule"
    // src/com/riis/decompiler/DexToSourceCasting.g:22:1: rule : class_name super_ source fields constructor ( methods )+ ;
    public final void rule() throws RecognitionException {
        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:25:2: ( class_name super_ source fields constructor ( methods )+ )
            // src/com/riis/decompiler/DexToSourceCasting.g:25:4: class_name super_ source fields constructor ( methods )+
            {
            pushFollow(FOLLOW_class_name_in_rule54);
            class_name();

            state._fsp--;


            pushFollow(FOLLOW_super__in_rule56);
            super_();

            state._fsp--;


            pushFollow(FOLLOW_source_in_rule58);
            source();

            state._fsp--;


            pushFollow(FOLLOW_fields_in_rule60);
            fields();

            state._fsp--;


            pushFollow(FOLLOW_constructor_in_rule62);
            constructor();

            state._fsp--;


            // src/com/riis/decompiler/DexToSourceCasting.g:25:48: ( methods )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==METHODSTRT) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/com/riis/decompiler/DexToSourceCasting.g:25:48: methods
            	    {
            	    pushFollow(FOLLOW_methods_in_rule64);
            	    methods();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            fout.printJava("}"); fout.close();
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "rule"



    // $ANTLR start "class_name"
    // src/com/riis/decompiler/DexToSourceCasting.g:28:1: class_name : CLASS f1= flags id2= IDENT ;
    public final void class_name() throws RecognitionException {
        Token id2=null;
        DexToSourceCastingParser.flags_return f1 =null;


        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:29:2: ( CLASS f1= flags id2= IDENT )
            // src/com/riis/decompiler/DexToSourceCasting.g:29:4: CLASS f1= flags id2= IDENT
            {
            match(input,CLASS,FOLLOW_CLASS_in_class_name77); 

            pushFollow(FOLLOW_flags_in_class_name81);
            f1=flags();

            state._fsp--;


            id2=(Token)match(input,IDENT,FOLLOW_IDENT_in_class_name85); 

            fout.printJava((f1!=null?input.toString(f1.start,f1.stop):null) + " class " + (id2!=null?id2.getText():null) + " {");
            		 className = (id2!=null?id2.getText():null);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "class_name"



    // $ANTLR start "super_"
    // src/com/riis/decompiler/DexToSourceCasting.g:34:1: super_ : SUPER package_ ;
    public final void super_() throws RecognitionException {
        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:35:2: ( SUPER package_ )
            // src/com/riis/decompiler/DexToSourceCasting.g:35:4: SUPER package_
            {
            match(input,SUPER,FOLLOW_SUPER_in_super_101); 

            pushFollow(FOLLOW_package__in_super_103);
            package_();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "super_"



    // $ANTLR start "source"
    // src/com/riis/decompiler/DexToSourceCasting.g:38:1: source : SOURCE IDENT '.java' ;
    public final void source() throws RecognitionException {
        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:39:2: ( SOURCE IDENT '.java' )
            // src/com/riis/decompiler/DexToSourceCasting.g:39:4: SOURCE IDENT '.java'
            {
            match(input,SOURCE,FOLLOW_SOURCE_in_source115); 

            match(input,IDENT,FOLLOW_IDENT_in_source117); 

            match(input,40,FOLLOW_40_in_source119); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "source"



    // $ANTLR start "fields"
    // src/com/riis/decompiler/DexToSourceCasting.g:42:1: fields : ( field )+ ;
    public final void fields() throws RecognitionException {
        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:45:2: ( ( field )+ )
            // src/com/riis/decompiler/DexToSourceCasting.g:45:4: ( field )+
            {
            // src/com/riis/decompiler/DexToSourceCasting.g:45:4: ( field )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==FIELD) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // src/com/riis/decompiler/DexToSourceCasting.g:45:4: field
            	    {
            	    pushFollow(FOLLOW_field_in_fields139);
            	    field();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            }

            fout.printJava(" ");
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "fields"



    // $ANTLR start "field"
    // src/com/riis/decompiler/DexToSourceCasting.g:48:1: field : FIELD f1= flags id2= IDENT p1= package_ ';' '=' id4= quoted_string ;
    public final void field() throws RecognitionException {
        Token id2=null;
        DexToSourceCastingParser.flags_return f1 =null;

        String p1 =null;

        String id4 =null;


        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:49:2: ( FIELD f1= flags id2= IDENT p1= package_ ';' '=' id4= quoted_string )
            // src/com/riis/decompiler/DexToSourceCasting.g:49:4: FIELD f1= flags id2= IDENT p1= package_ ';' '=' id4= quoted_string
            {
            match(input,FIELD,FOLLOW_FIELD_in_field152); 

            pushFollow(FOLLOW_flags_in_field156);
            f1=flags();

            state._fsp--;


            id2=(Token)match(input,IDENT,FOLLOW_IDENT_in_field160); 

            pushFollow(FOLLOW_package__in_field164);
            p1=package_();

            state._fsp--;


            match(input,43,FOLLOW_43_in_field166); 

            match(input,44,FOLLOW_44_in_field168); 

            pushFollow(FOLLOW_quoted_string_in_field172);
            id4=quoted_string();

            state._fsp--;


            fout.printJava((f1!=null?input.toString(f1.start,f1.stop):null) + " " + p1 + " " + (id2!=null?id2.getText():null) + " = \"" + id4 + "\"" );

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "field"



    // $ANTLR start "constructor"
    // src/com/riis/decompiler/DexToSourceCasting.g:53:1: constructor : METHODSTRT f1= flags INIT p1= params r1= return_ ( scrap )* method_end ;
    public final void constructor() throws RecognitionException {
        DexToSourceCastingParser.flags_return f1 =null;

        String p1 =null;

        String r1 =null;


        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:54:2: ( METHODSTRT f1= flags INIT p1= params r1= return_ ( scrap )* method_end )
            // src/com/riis/decompiler/DexToSourceCasting.g:54:4: METHODSTRT f1= flags INIT p1= params r1= return_ ( scrap )* method_end
            {
            match(input,METHODSTRT,FOLLOW_METHODSTRT_in_constructor188); 

            pushFollow(FOLLOW_flags_in_constructor192);
            f1=flags();

            state._fsp--;


            match(input,INIT,FOLLOW_INIT_in_constructor194); 

            pushFollow(FOLLOW_params_in_constructor198);
            p1=params();

            state._fsp--;


            pushFollow(FOLLOW_return__in_constructor202);
            r1=return_();

            state._fsp--;


            fout.printJava((f1!=null?input.toString(f1.start,f1.stop):null) + " " + className + p1 + " {");

            // src/com/riis/decompiler/DexToSourceCasting.g:56:4: ( scrap )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==INVOKE_DIRECT||(LA3_0 >= LIMIT && LA3_0 <= LINE)||LA3_0==RETURN_VOID||LA3_0==43) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/com/riis/decompiler/DexToSourceCasting.g:56:4: scrap
            	    {
            	    pushFollow(FOLLOW_scrap_in_constructor211);
            	    scrap();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            pushFollow(FOLLOW_method_end_in_constructor214);
            method_end();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "constructor"



    // $ANTLR start "methods"
    // src/com/riis/decompiler/DexToSourceCasting.g:59:1: methods : ( method_start ( scrap )* method_end | method_start ( scrap )* for_start for_body ( scrap )* for_end method_end );
    public final void methods() throws RecognitionException {
        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:60:2: ( method_start ( scrap )* method_end | method_start ( scrap )* for_start for_body ( scrap )* for_end method_end )
            int alt7=2;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // src/com/riis/decompiler/DexToSourceCasting.g:60:4: method_start ( scrap )* method_end
                    {
                    pushFollow(FOLLOW_method_start_in_methods226);
                    method_start();

                    state._fsp--;


                    // src/com/riis/decompiler/DexToSourceCasting.g:60:17: ( scrap )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==INVOKE_DIRECT||(LA4_0 >= LIMIT && LA4_0 <= LINE)||LA4_0==RETURN_VOID||LA4_0==43) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // src/com/riis/decompiler/DexToSourceCasting.g:60:17: scrap
                    	    {
                    	    pushFollow(FOLLOW_scrap_in_methods228);
                    	    scrap();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    pushFollow(FOLLOW_method_end_in_methods231);
                    method_end();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src/com/riis/decompiler/DexToSourceCasting.g:61:4: method_start ( scrap )* for_start for_body ( scrap )* for_end method_end
                    {
                    pushFollow(FOLLOW_method_start_in_methods236);
                    method_start();

                    state._fsp--;


                    // src/com/riis/decompiler/DexToSourceCasting.g:61:17: ( scrap )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==INVOKE_DIRECT||(LA5_0 >= LIMIT && LA5_0 <= LINE)||LA5_0==RETURN_VOID||LA5_0==43) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // src/com/riis/decompiler/DexToSourceCasting.g:61:17: scrap
                    	    {
                    	    pushFollow(FOLLOW_scrap_in_methods238);
                    	    scrap();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);


                    pushFollow(FOLLOW_for_start_in_methods241);
                    for_start();

                    state._fsp--;


                    pushFollow(FOLLOW_for_body_in_methods243);
                    for_body();

                    state._fsp--;


                    // src/com/riis/decompiler/DexToSourceCasting.g:61:43: ( scrap )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==INVOKE_DIRECT||(LA6_0 >= LIMIT && LA6_0 <= LINE)||LA6_0==RETURN_VOID||LA6_0==43) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // src/com/riis/decompiler/DexToSourceCasting.g:61:43: scrap
                    	    {
                    	    pushFollow(FOLLOW_scrap_in_methods245);
                    	    scrap();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);


                    pushFollow(FOLLOW_for_end_in_methods248);
                    for_end();

                    state._fsp--;


                    pushFollow(FOLLOW_method_end_in_methods250);
                    method_end();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "methods"



    // $ANTLR start "method_start"
    // src/com/riis/decompiler/DexToSourceCasting.g:64:1: method_start : METHODSTRT f1= flags id1= IDENT p1= params r1= return_ ;
    public final void method_start() throws RecognitionException {
        Token id1=null;
        DexToSourceCastingParser.flags_return f1 =null;

        String p1 =null;

        String r1 =null;


        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:65:2: ( METHODSTRT f1= flags id1= IDENT p1= params r1= return_ )
            // src/com/riis/decompiler/DexToSourceCasting.g:65:4: METHODSTRT f1= flags id1= IDENT p1= params r1= return_
            {
            match(input,METHODSTRT,FOLLOW_METHODSTRT_in_method_start262); 

            pushFollow(FOLLOW_flags_in_method_start266);
            f1=flags();

            state._fsp--;


            id1=(Token)match(input,IDENT,FOLLOW_IDENT_in_method_start270); 

            pushFollow(FOLLOW_params_in_method_start274);
            p1=params();

            state._fsp--;


            pushFollow(FOLLOW_return__in_method_start278);
            r1=return_();

            state._fsp--;


            fout.printJava((f1!=null?input.toString(f1.start,f1.stop):null) + " " + r1 + " " + (id1!=null?id1.getText():null) + "(" + p1 + ") {");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "method_start"



    // $ANTLR start "method_end"
    // src/com/riis/decompiler/DexToSourceCasting.g:69:1: method_end : METHODEND ;
    public final void method_end() throws RecognitionException {
        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:72:2: ( METHODEND )
            // src/com/riis/decompiler/DexToSourceCasting.g:72:4: METHODEND
            {
            match(input,METHODEND,FOLLOW_METHODEND_in_method_end302); 

            }

            fout.printJava("}\n ");
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "method_end"



    // $ANTLR start "for_start"
    // src/com/riis/decompiler/DexToSourceCasting.g:75:1: for_start : id1= put_in_reg label id2= put_in_reg if_ge ( scrap )* ;
    public final void for_start() throws RecognitionException {
        String id1 =null;

        String id2 =null;


        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:76:2: (id1= put_in_reg label id2= put_in_reg if_ge ( scrap )* )
            // src/com/riis/decompiler/DexToSourceCasting.g:76:4: id1= put_in_reg label id2= put_in_reg if_ge ( scrap )*
            {
            pushFollow(FOLLOW_put_in_reg_in_for_start316);
            id1=put_in_reg();

            state._fsp--;


            pushFollow(FOLLOW_label_in_for_start318);
            label();

            state._fsp--;


            pushFollow(FOLLOW_put_in_reg_in_for_start322);
            id2=put_in_reg();

            state._fsp--;


            pushFollow(FOLLOW_if_ge_in_for_start324);
            if_ge();

            state._fsp--;


            // src/com/riis/decompiler/DexToSourceCasting.g:76:46: ( scrap )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==INVOKE_DIRECT||(LA8_0 >= LIMIT && LA8_0 <= LINE)||LA8_0==RETURN_VOID||LA8_0==43) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // src/com/riis/decompiler/DexToSourceCasting.g:76:46: scrap
            	    {
            	    pushFollow(FOLLOW_scrap_in_for_start326);
            	    scrap();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            fout.printJava("for(a = " + id1 + "; a < " + id2 + "; a++) {");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "for_start"



    // $ANTLR start "for_body"
    // src/com/riis/decompiler/DexToSourceCasting.g:80:1: for_body : id1= sget id3= stmt_builder id2= invoke_virtual ;
    public final void for_body() throws RecognitionException {
        String id1 =null;

        String id3 =null;

        String id2 =null;


        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:81:2: (id1= sget id3= stmt_builder id2= invoke_virtual )
            // src/com/riis/decompiler/DexToSourceCasting.g:81:4: id1= sget id3= stmt_builder id2= invoke_virtual
            {
            pushFollow(FOLLOW_sget_in_for_body345);
            id1=sget();

            state._fsp--;


            pushFollow(FOLLOW_stmt_builder_in_for_body349);
            id3=stmt_builder();

            state._fsp--;


            pushFollow(FOLLOW_invoke_virtual_in_for_body353);
            id2=invoke_virtual();

            state._fsp--;


            fout.printJava(id1 + "." + id2 + "(" + id3);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "for_body"



    // $ANTLR start "stmt_builder"
    // src/com/riis/decompiler/DexToSourceCasting.g:85:1: stmt_builder returns [String result] : new_instance id1= invoke_move id2= invoke_move id3= invoke_move id4= invoke_move id5= invoke_move ;
    public final String stmt_builder() throws RecognitionException {
        String result = null;


        String id1 =null;

        String id2 =null;

        String id3 =null;

        String id4 =null;

        String id5 =null;


        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:86:2: ( new_instance id1= invoke_move id2= invoke_move id3= invoke_move id4= invoke_move id5= invoke_move )
            // src/com/riis/decompiler/DexToSourceCasting.g:86:4: new_instance id1= invoke_move id2= invoke_move id3= invoke_move id4= invoke_move id5= invoke_move
            {
            pushFollow(FOLLOW_new_instance_in_stmt_builder373);
            new_instance();

            state._fsp--;


            pushFollow(FOLLOW_invoke_move_in_stmt_builder377);
            id1=invoke_move();

            state._fsp--;


            pushFollow(FOLLOW_invoke_move_in_stmt_builder381);
            id2=invoke_move();

            state._fsp--;


            pushFollow(FOLLOW_invoke_move_in_stmt_builder385);
            id3=invoke_move();

            state._fsp--;


            pushFollow(FOLLOW_invoke_move_in_stmt_builder389);
            id4=invoke_move();

            state._fsp--;


            pushFollow(FOLLOW_invoke_move_in_stmt_builder393);
            id5=invoke_move();

            state._fsp--;


            result = "\"" + id1 + "\" + " + id2 + " + \"" + id3 + "\" + " + id4 + ");";

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return result;
    }
    // $ANTLR end "stmt_builder"



    // $ANTLR start "invoke_move"
    // src/com/riis/decompiler/DexToSourceCasting.g:90:1: invoke_move returns [String result] : (id1= invoke_virtual move_result |id1= const_string invoke_virtual move_result );
    public final String invoke_move() throws RecognitionException {
        String result = null;


        String id1 =null;


        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:91:2: (id1= invoke_virtual move_result |id1= const_string invoke_virtual move_result )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==INVOKE_VIRTUAL) ) {
                alt9=1;
            }
            else if ( (LA9_0==CONST_STRING) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;

            }
            switch (alt9) {
                case 1 :
                    // src/com/riis/decompiler/DexToSourceCasting.g:91:4: id1= invoke_virtual move_result
                    {
                    pushFollow(FOLLOW_invoke_virtual_in_invoke_move415);
                    id1=invoke_virtual();

                    state._fsp--;


                    pushFollow(FOLLOW_move_result_in_invoke_move417);
                    move_result();

                    state._fsp--;


                    result = id1;

                    }
                    break;
                case 2 :
                    // src/com/riis/decompiler/DexToSourceCasting.g:93:4: id1= const_string invoke_virtual move_result
                    {
                    pushFollow(FOLLOW_const_string_in_invoke_move428);
                    id1=const_string();

                    state._fsp--;


                    pushFollow(FOLLOW_invoke_virtual_in_invoke_move430);
                    invoke_virtual();

                    state._fsp--;


                    pushFollow(FOLLOW_move_result_in_invoke_move432);
                    move_result();

                    state._fsp--;


                    result = id1;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return result;
    }
    // $ANTLR end "invoke_move"



    // $ANTLR start "move_result"
    // src/com/riis/decompiler/DexToSourceCasting.g:97:1: move_result : MOVE_RESULT_OBJECT reg ;
    public final void move_result() throws RecognitionException {
        try {
            // src/com/riis/decompiler/DexToSourceCasting.g:98:2: ( MOVE_RESULT_OBJECT reg )
            // src/com/riis/decompiler/DexToSourceCasting.g:98:4: MOVE_RESULT_OBJECT reg
            {
            match(input,MOVE_RESULT_OBJECT,FOLLOW_MOVE_RESULT_OBJECT_in_move_result448); 

            pushFollow(FOLLOW_reg_in_move_result450);
            reg();

            state._fsp--;


            }
